# corroboy

./: .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  check_unimplemented_ops.sh
src/: gameboy.rs  main.rs
src/corroboy/: mod.rs
src/corroboy/cpu/: mod.rs  registers.rs
src/corroboy/cpu/ops/: adc.rs  add.rs  and.rs  bit.rs  cp.rs  dec.rs  inc.rs  jump.rs  ld.rs  misc.rs  mod.rs  or.rs  pop.rs  push.rs  res.rs  ret.rs  rl.rs  rr.rs  rst.rs  sbc.rs  set.rs  sl.rs  sr.rs  sub.rs  swap.rs  xor.rs
src/corroboy/cpu/tests/: adc.rs  add.rs  and.rs  bit.rs  cp.rs  dec.rs  inc.rs  mod.rs  or.rs  rl.rs  rr.rs  rst.rs  sbc.rs  sl.rs  sr.rs  sub.rs  swap.rs  xor.rs
src/corroboy/disassembler/: mod.rs
src/corroboy/gpu/: background.rs  mod.rs  sprite.rs
src/corroboy/joypad/: mod.rs  tests.rs
src/corroboy/mmu/: mod.rs  tests.rs
src/corroboy/mmu/cartridge/: mbc1.rs  mbc2.rs  mbc3.rs  mbc5.rs  mod.rs  no_mbc.rs
src/corroboy/timer/: mod.rs  tests.rs
src/gameboy/: mmu.rs  mod.rs  ops.rs  timer.rs
src/gameboy/cpu/: mod.rs  registers.rs
src/gameboy/cpu/ops/: adc.rs  add.rs  and.rs  bit.rs  cp.rs  dec.rs  inc.rs  jump.rs  ld.rs  misc.rs  mod.rs  or.rs  pop.rs  push.rs  res.rs  ret.rs  rl.rs  rr.rs  rst.rs  sbc.rs  set.rs  (+5 more)
src/gameboy/disassembler/: mod.rs
src/gameboy/gpu/: background.rs  mod.rs  sprite.rs
src/gameboy/joypad/: mod.rs  tests.rs
src/gameboy/mmu/: mod.rs  tests.rs
src/gameboy/ops/: adc.rs  add.rs  and.rs  cp.rs  dec.rs  inc.rs  ld.rs  misc.rs  mod.rs  or.rs  pop.rs  push.rs  ret.rs  rl.rs  sbc.rs  sub.rs  swap.rs  xor.rs
src/gameboy/timer/: mod.rs  tests.rs
(+18 files in other folders)
