[package]
name = "gameboy-emu"
version = "0.1.0"
authors = ["Caleb Boylan <calebboylan@gmail.com>"]

[dependencies]
piston = "0.36.0"
piston_window = "0.79.0"
piston2d-graphics = "0.26.0"
pistoncore-glutin_window = "0.46.0"
piston2d-opengl_graphics = "0.53.0"
image = "0.19.0"
cpuprofiler = "0.0.3"
getopts = "0.2"

[profile.dev]
overflow-checks = false
opt-level = 3

[profile.test]
overflow-checks = false
